Rename slot DataSourceFactory::open()

On some (32bit) systems, open may be #define'd to open64 when the moc
file is generated, which breaks the compilation.
Renaming the slot to slotOpen() should avoid this problem.

BUG: 386948